Провести рефакторинг сервисов, контроллеров и хранилищ